# platformer-from-scratch

./: .gitignore  CMakeLists.txt  Makefile  README.md  alive.cpp  alive.h  anim.cpp  anim.h  anim_handler.cpp  anim_handler.h  attack.cpp  attack.h  attack_box.cpp  attack_box.h  attack_manager.cpp  attack_manager.h  attackable.cpp  attackable.h  block.cpp  block.h  box.cpp  box.h  box_object.cpp  box_object.h  bullet.cpp  bullet.h  camera.cpp  camera.h  chunk_prop.cpp  chunk_prop.h  collide_functions.cpp  collide_functions.h  collider.cpp  collider.h  consts.cpp  consts.h  coords.cpp  coords.h  creature.cpp  creature.h  (+73 more)
data/attack-info/: spaceman_neutral_side.info  spaceman_special_side.info
data/character-info/: spaceman.info
data/frame-info/: spaceman_crouching.frames  spaceman_hanging.frames  spaceman_idle.frames  spaceman_jumping.frames  spaceman_punching.frames  (+2 more)
notes/: ideas  psuedocode  todo
src/: CMakeLists.txt  anim.cpp  anim.h  anim_handler.cpp  anim_handler.h  attack.h  attack_box.cpp  attack_box.h  attack_manager.cpp  attack_manager.h  attackable.cpp  attackable.h  block.cpp  box.h  chunk_prop.cpp  chunk_prop.h  collide_functions.h  collider.cpp  collider.h  coords.cpp  coords.h  delayed_action.cpp  delayed_action.h  delayed_attack.h  delayed_attack_bullet.h  enemy_basic.cpp  enemy_basic.h  gravity_affected.h  image.h  jumper.h  keys.h  level_loader.cpp  main.cpp  manager.cpp  manager.h  map.h  mover.cpp  mover.h  object.cpp  object.h  (+8 more)
test/: CMakeLists.txt  alive_test.cpp  anim_handler_test.cpp  anim_test.cpp  attack_box_test.cpp  attack_manager_test.cpp  attack_test.cpp  attackable_test.cpp  block_test.cpp  box_object_test.cpp  box_test.cpp  camera_test.cpp  catch.h  chunk_prop_test.cpp  collide_functions_test.cpp  collider_test.cpp  death_box_test.cpp  death_test.cpp  delayed_action_test.cpp  directed_attack_test.cpp  disabled_test.cpp  friction_test.cpp  gravity_affected_test.cpp  image_test.cpp  jumper_test.cpp  keys_test.cpp  knockback_mult_test.cpp  knockback_test.cpp  ledge_grabber_test.cpp  level_loader_test.cpp  manager_test.cpp  map_test.cpp  mover_test.cpp  npc_test.cpp  object_test.cpp  origin_test.cpp  player_test.cpp  resource_manager_test.cpp  shared_texture_test.cpp  sound_player_test.cpp  (+7 more)
(+1 files in other folders)
