SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")

add_library(base STATIC
	anim.cpp
	anim_handler.cpp
	attackable.cpp
	attack_box.cpp
	attack.cpp
	attack_manager.cpp
	block.cpp
	box.cpp
	box_object.cpp
	camera.cpp
	chunk_prop.cpp
	collide_functions.cpp
	collider.cpp
	consts.cpp
	coords.cpp
	creature.cpp
	delayed_action.cpp
	delayed_attack_box.cpp
	delayed_attack_bullet.cpp
	delayed_attack.cpp
	disabled.cpp
	enemy_basic.cpp
	friction.cpp
	gravity_affected.cpp
	image.cpp
	jumper.cpp
	keys.cpp
	knockback.cpp
	ledge_grabber.cpp
	level_loader.cpp
	manager.cpp
	map.cpp
	mover.cpp
	object.cpp
	player.cpp
	resource_manager.cpp
	shared_texture.cpp
	sound_player.cpp
	spawnable.cpp
	teleport_box.cpp
	teleporter.cpp
	text.cpp
	trigger.cpp
	vel_accel.cpp
)
